# RAMSES-CPP

./: .geminiignore  .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  LICENSE  PORTING_HISTORY.md  README.md
cpp/: CMakeLists.txt
cpp/include/ramses/: AmrGrid.hpp  Constants.hpp  HydroSolver.hpp  Parameters.hpp  RamsesReader.hpp  TreeUpdater.hpp
cpp/src/: AmrGrid.cpp  Constants.cpp  HydroSolver.cpp  Initializer.cpp  Parameters.cpp  RamsesReader.cpp  Simulation.cpp  TreeUpdater.cpp  main.cpp
docs/: amr_grid.md  architecture.md  conf.py  index.md  installation.md  mhd.md  physics_solvers.md  poisson.md  testing_validation.md  time_integration.md  usage.md
include/ramses/: AmrGrid.hpp  ClumpFinder.hpp  Config.hpp  Constants.hpp  CoolingSolver.hpp  Cosmology.hpp  FeedbackSolver.hpp  Field.hpp  HydroSolver.hpp  Initializer.hpp  LightCone.hpp  LoadBalancer.hpp  MhdSolver.hpp  Muscl.hpp  Parameters.hpp  ParticleSolver.hpp  PoissonSolver.hpp  RamsesReader.hpp  RamsesWriter.hpp  RelativisticRiemannSolver.hpp  RiemannSolver.hpp  RtChemistry.hpp  RtSolver.hpp  Simulation.hpp  SinkSolver.hpp  SlopeLimiter.hpp  SolverFactory.hpp  TreeUpdater.hpp  TurbulenceSolver.hpp  Types.hpp
include/ramses/core/: Parameters.hpp  Simulation.hpp  SolverFactory.hpp
include/ramses/io/: Hdf5Writer.hpp  RamsesReader.hpp
include/ramses/solvers/physics/: EquationOfState.hpp  StarSolver.hpp
include/ramses/solvers/rhd/: RhdSolver.hpp
include/ramses/utils/: Logger.hpp
patch/: PatchCoolingSolver.cpp  PatchHydroSolver.cpp  PatchInitializer.cpp
src/: AmrGrid.cpp  CMakeLists.txt  ClumpFinder.cpp  Config.cpp  Constants.cpp  CoolingSolver.cpp  Cosmology.cpp  FeedbackSolver.cpp  Hdf5Writer.cpp  HydroSolver.cpp  Initializer.cpp  LightCone.cpp  LoadBalancer.cpp  MhdSolver.cpp  Muscl.cpp  Parameters.cpp  ParticleSolver.cpp  PoissonSolver.cpp  RamsesReader.cpp  RamsesWriter.cpp  RelativisticRiemannSolver.cpp  RhdSolver.cpp  RiemannSolver.cpp  RtChemistry.cpp  RtSolver.cpp  Simulation.cpp  SinkSolver.cpp  SlopeLimiter.cpp  SolverFactory.cpp  StarSolver.cpp  TreeUpdater.cpp  TurbulenceSolver.cpp  main.cpp  verify_ref.cpp
src/core/: AmrGrid.cpp  CMakeLists.txt  Config.cpp  Constants.cpp  Cosmology.cpp  Hilbert.cpp  LoadBalancer.cpp  MpiManager.cpp  Parameters.cpp  Simulation.cpp  SolverFactory.cpp  TreeUpdater.cpp
src/io/: CMakeLists.txt  Hdf5Writer.cpp  LightCone.cpp  RamsesReader.cpp  RamsesWriter.cpp
src/particles/: CMakeLists.txt  ParticleSolver.cpp  ParticleSystem.cpp
src/solvers/: CMakeLists.txt
src/solvers/gravity/: CMakeLists.txt  PoissonSolver.cpp
src/solvers/hydro/: CMakeLists.txt  HydroSolver.cpp  RiemannSolver.cpp  SlopeLimiter.cpp
src/solvers/mhd/: CMakeLists.txt  MhdSolver.cpp
src/solvers/physics/: CMakeLists.txt  ClumpFinder.cpp  CoolingSolver.cpp  EquationOfState.cpp  FeedbackSolver.cpp  SinkSolver.cpp  StarSolver.cpp  TurbulenceSolver.cpp
src/solvers/rhd/: CMakeLists.txt  RelativisticRiemannSolver.cpp  RhdSolver.cpp
src/solvers/rt/: CMakeLists.txt  RtChemistry.cpp  RtSolver.cpp
src/utils/: CMakeLists.txt  Logger.cpp
tests/: daily_test.sh  multi_gcov_aggregator.py  run_test_suite.sh  run_with_restart.py
tests/hydro/advect1d/: advect1d.nml
tests/hydro/barotrop/output_00001/: amr_00001.out00001  header_00001.txt  info_00001.txt
tests/hydro/barotrop/output_00002/: hydro_00002.out00001  info_00002.txt
tests/hydro/decaying-turbulence/: before-test.sh  decaying-turbulence.nml  initial_conditions.py  plot-decaying-turbulence.py
tests/hydro/implosion/: implosion.nml
tests/hydro/sod-tube/: before-test.sh  check_solution.py  sod-tube-parameter-study-ref.csv  sod-tube-parameter-study.csv  sod-tube.nml
tests/hydro/sod-tube-nener/output_00001/: hydro_file_descriptor.txt  info_00001.txt
tests/hydro/sod-tube/output_00001/: amr_00001.out00001
tests/mhd/abc-flow/: abc-flow.nml
tests/mhd/collapse-baro/: collapse-baro.nml
tests/mhd/imhd-tube/: before-test.sh  imhd-tube-parameter-study.csv
tests/mhd/orszag-tang/: integrated_test.nml  orszag-tang.nml  plot-orszag-tang.py
tests/rt/cooling-neq/: config.txt
tests/rt/crossing-beams/: crossing-beams.nml
tests/rt/eq-abundances/: config.txt  eq-abundances.nml  plot-eq-abundances.py
tests/rt/shadow2d/: shadow2d.nml
tests/rt/stromgren2d-He/: stromgren2d-He.nml
tests/star/sfvirialtrue-sfmodel0/: before-test.sh  config.txt  plot-sfvirialtrue-sfmodel0.py  sfvirialtrue-sfmodel0.nml
tests/visu/: compare_snapshots.py  visu_ramses.py
tools/: build_config.sh  report_test_results.py
tools/ramses-patch-porter/: README.md  port_patch.py  rosetta_prompt.txt
